# ledger

./: .gitattributes  AGENTS.md  PROGRESS.md  README.md  pyproject.toml
.github/: CODEOWNERS  ledger-agents.yml  pull_request_template.md
.github/workflows/: ci.yml  thesis-facts-append.yml
arch/: __init__.py  artifacts.py  bundle.py  cli.py  concepts.py  consumer_contract.py  core.py  database.py  harness.py  mirror.py  pe_source_plan.py  source_package.py  store.py  suite.py
arch/facts/: __init__.py
arch/fixtures/: consumer_facts.jsonl  facts.jsonl
arch/sources/: __init__.py  cells.py  rows.py  specs.py
arch/targets/: __init__.py  us_poverty.py
calibration/: constraints.py  loader.py  targets.py  variables.py
calibration/methods/: entropy.py
data/targets/: README.md
db/: __init__.py  cli.py  etl_aca_enrollment.py  etl_bls.py  etl_census.py  etl_census_cd119_sld.py  etl_census_pep.py  etl_census_stc.py  etl_cms_aca_oep.py  etl_cms_nhe.py  etl_cps.py  etl_cps_raw.py  etl_hmrc.py  etl_medicaid.py  etl_snap.py  etl_soi.py  etl_soi_credits.py  etl_soi_historic_table_2.py  etl_soi_ira.py  etl_soi_w2.py  etl_ssa.py  etl_ssa_supplement.py  etl_ssi.py  etl_tanf.py  etl_targets_supabase.py  pe_source_inventory.py  rollups.py  schema.py  source_files.py  supabase_client.py
db/tests/: test_etl_cps_raw.py
docs/: PUF_INTEGRATION.md  adr-arch-fact-identity-v2.md  adr-ledger-fact-identity-v2.md  adr-ledger-facts-only.md  agent-source-package-harness.md  arch-fact-identity-architecture.html  arch-fact-identity-review-packet.md  architecture.md  calibration-fact-opportunity-scan.md  calibration-pipeline.md  cps-variable-coverage.md  ledger-governance.md  microplex-arch-migration-brief.md  pe-calibration-targets.md  pe-source-coverage-audit.md  pe-uk-source-checklist.md  pe-us-source-agent-plan.json  pe-us-source-agent-plan.md  pe-us-source-manifest.csv  pe-us-source-manifest.md  repository-model.md  storage-architecture.md  target-construction-harness-plan.md  weight-methodology.md
docs/schemas/: consumer_fact.v1.schema.json
ledger/: README.md  __init__.py  artifacts.py  bundle.py  cli.py  client.py  concepts.py  consumer_contract.py  core.py  database.py  harness.py  immutable_prefix.json  mirror.py  official_observations.jsonl  pe_source_plan.py  source_package.py  store.py  suite.py
ledger/facts/: __init__.py  models.py
ledger/fixtures/: consumer_facts.jsonl  facts.jsonl
ledger/jurisdictions/: __init__.py
ledger/microdata/: __init__.py  client.py
ledger/normalization/: __init__.py  targets.py
ledger/sources/: __init__.py  cells.py  client.py  models.py  rows.py  specs.py
ledger/targets/: __init__.py  client.py  loaders.py  us_poverty.py
micro/us/: calibrate.py  district.py  (+14 more)
policyengine_ledger/: __init__.py  cli.py  consumer.py  core.py  database.py  facts.py  schema.py
releases/: README.md
scripts/: canonical_json.py  check_thesis_facts_append.py  cps_to_policyengine.py  cut_release_manifest.py  export_to_json.py  receipt_pins.py  verify_release_chain.py  vidimus_pins.py
tests/: test_arch_artifacts.py  test_arch_boundaries.py  test_arch_bundle.py  test_arch_concepts.py  test_arch_consumer_contract.py  test_arch_core.py  test_arch_database.py  test_arch_harness.py  test_arch_mirror.py  test_arch_pe_source_plan.py  test_arch_soi_targets.py  test_arch_source_cells.py  test_arch_source_package.py  test_arch_source_rows.py  test_arch_suite.py  test_belgium_targets.py  test_calibration.py  test_congressional_districts.py  test_download_cps.py  test_etl_aca_enrollment.py  test_etl_cbo.py  test_etl_census_cd119_sld.py  test_etl_census_pep.py  test_etl_census_stc.py  test_etl_cms_aca_oep.py  test_etl_cms_nhe.py  test_etl_cps.py  test_etl_hmrc.py  test_etl_medicaid.py  test_etl_obr.py  test_etl_ons.py  test_etl_snap.py  test_etl_soi.py  test_etl_soi_credits.py  test_etl_soi_deductions.py  test_etl_soi_historic_table_2.py  test_etl_soi_income_sources.py  test_etl_soi_ira.py  test_etl_soi_state.py  test_etl_soi_w2.py  (+45 more)
(+283 files in other folders)
