[project]
name = "policyengine-ledger"
version = "0.1.0"
description = "PolicyEngine Ledger source-data foundation: source facts, microdata, and target profiles"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" }
]

dependencies = [
    "sqlmodel>=0.0.22",
    "supabase>=2.0.0",  # Supabase Python client
    "pyyaml>=6.0",
    "httpx>=0.27.0",  # For fetching external data
    "numpy>=1.24.0",  # For calibration calculations
    "pandas>=2.0.0",  # For microdata handling
    "scipy>=1.11.0",  # For entropy minimization optimization
    "pyarrow>=22.0.0",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
    "xlrd>=2.0.1",
    "pypdf>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "ruff>=0.5.0",
]
policyengine = [
    "policyengine-us>=1.670.2",
]
legacy = [
    "microplex>=0.1.0",
]

[project.scripts]
ledger = "policyengine_ledger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ledger", "db", "micro", "calibration", "packages", "policyengine_ledger"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
]
