[project]
name = "policyengine-arch-data"
version = "0.1.0"
description = "PolicyEngine Arch source-data foundation: source facts, microdata, and target inputs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" }
]

dependencies = [
    "cryptography>=46.0.3",
    "sqlmodel>=0.0.22",
    "supabase>=2.0.0",  # Supabase Python client
    "pyyaml>=6.0",
    "httpx>=0.27.0",  # For fetching external data
    "numpy>=1.24.0",  # For calibration calculations
    "pandas>=2.0.0",  # For microdata handling
    "scipy>=1.11.0",  # For entropy minimization optimization
    "microplex>=0.1.0",  # Synthesis and calibration algorithms
    "pyarrow>=22.0.0",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
    "xlrd>=2.0.1",
    "pypdf>=6.0.0",
    "receipt==0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "ruff>=0.5.0",
]
policyengine = [
    "policyengine-us>=1.670.2",
]

[project.scripts]
arch = "arch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arch", "db", "micro", "calibration", "packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
]
